--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "axios": "^0.20.0"
+    "axios": "^0.20.0",
+    "dotenv": "^8.2.0"
   }
 }
