--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "build": "tsc --project ./",
+    "watch": "tsc -w --project ./",
     "start": "node ./lib/main.js"
   },
   "repository": {
