--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "jest": "^26.5.3",
     "ts-jest": "^26.4.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.3"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "axios": "^0.20.0",
     "ckan": "^0.2.3",
-    "dotenv": "^8.2.0"
+    "dotenv-extended": "^2.9.0"
   }
 }
