--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,15 +16,14 @@
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
     "outDir": "lib",                      /* Redirect output structure to the directory. */
     "rootDir": "src",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
-    "typeRoots": [  "./node_modules/@types"],
+    "typeRoots": [ "./types", "./node_modules/@types"],
     /* Strict Type-Checking Options */
     "strict": true,                           /* Enable all strict type-checking options. */
     "esModuleInterop": true,                  /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
-   
     /* Advanced Options */
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
 
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "types"]
 }
