more refactoring to tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
     "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
 
   },
-  "exclude": ["node_modules", "types"]
+  "exclude": ["node_modules", "types", "**/*.spec.ts"]
 }
