--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "coverage": "jest --coverage",
     "build": "tsc --project ./",
     "watch": "tsc -w --project ./",
     "start": "node ./lib/main.js"
